--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "mui": "^0.0.1",
     "next": "14.2.5",
     "openai": "^4.55.3",
     "react": "^18",
