--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.6",
     "mui": "^0.0.1",
     "next": "14.2.5",
+    "next-images": "^1.8.5",
     "openai": "^4.55.3",
     "react": "^18",
     "react-dom": "^18"
