--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.16.0",
     "@mui/material": "^5.16.6",
+    "mui-image": "^1.0.7",
     "next": "14.2.5",
+    "next-images": "^1.8.5",
     "openai": "^4.55.3",
     "react": "^18",
     "react-dom": "^18"
